infrastructure/networking/envoy-gateway/config/argocd-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - argocd.k8s.749rmw.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
