infrastructure/networking/envoy-gateway/config/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - argocd.k8s.749rmw.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
